mywork/force-app/main/default/objects/Code_Coverage__c/Code_Coverage__c.object-meta.xml
<CustomObject>
    <label>Code Coverage</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Code Coverage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Code Coverage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>