mywork/force-app/main/default/objects/Code_Coverage__c/fields/Class_Id__c.field-meta.xml
<CustomField>
    <fullName>Class_Id__c</fullName>
    <externalId>true</externalId>
    <label>Class Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>