mywork/force-app/main/default/objects/Code_Coverage__c/fields/Code_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Code_Coverage__c</fullName>
    <formula>IF(Total_Lines__c  != 0 ,   Lines_Covered__c  /   Total_Lines__c , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total code coverage of all Apex classes and triggers.  75% is needed to pass.</inlineHelpText>
    <label>Apex Code Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>