mywork/force-app/main/default/objects/Code_Coverage__c/fields/Code_Coverage_Result__c.field-meta.xml
<CustomField>
    <fullName>Code_Coverage_Result__c</fullName>
    <formula>IF (Total_Lines__c = 0 &amp;&amp; Lines_Covered__c = 0, "N/A",
IF (Total_Lines__c > 0 &amp;&amp; Code_Coverage__c >= 0.75, "Pass", "Warning"
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The result of the code coverage.  Must be 75% or higher to pass.</inlineHelpText>
    <label>Code Coverage Result</label>
    <type>Text</type>
</CustomField>