mywork/force-app/main/default/objects/Code_Coverage__c/fields/Lines_Covered__c.field-meta.xml
<CustomField>
    <fullName>Lines_Covered__c</fullName>
    <inlineHelpText>The number of apex code lines that have been executed after running unit tests.</inlineHelpText>
    <label>Lines Covered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>