mywork/force-app/main/default/objects/Code_Coverage__c/fields/Total_Lines__c.field-meta.xml
<CustomField>
    <fullName>Total_Lines__c</fullName>
    <inlineHelpText>The total number of lines in this Apex trigger or class.</inlineHelpText>
    <label>Total Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>