mywork/force-app/main/default/objects/Code_Coverage__c/fields/Unit_Test_Summary__c.field-meta.xml
<CustomField>
    <fullName>Unit_Test_Summary__c</fullName>
    <inlineHelpText>The summary record that this test result is a part of.</inlineHelpText>
    <label>Unit Test Summary</label>
    <referenceTo>Unit_Test_Summary__c</referenceTo>
    <relationshipName>Apex_Coverage</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>